--- a/src/content/projects/en/flappy-bird-game.mdx
+++ b/src/content/projects/en/flappy-bird-game.mdx
@@ -1,4 +1,4 @@
-﻿---
+---
 title: "Flappy Bird Game"
 summary: "Flappy Bird clone built with Python and Pygame."
 github: "https://github.com/furkandalyan/Flappy-Bird.git"
@@ -13,5 +13,24 @@ Features:
 - PNG-based score display
 - Smooth controls
 - Persistent high score system
+
+## Tech Stack
+- Python 3.x
+- Pygame
+- Math Module
+- OS/Sys
+
+## Technical Architecture
+`Input -> Game Loop -> Physics & Collision -> Renderer -> Score Storage`
+
+## Challenges & Lessons Learned
+- Fair pixel-perfect collision detection
+- FPS stabilization and performance
+- Asset loading and memory management
+
+## Testing / Logging / Monitoring
+- Tests: Manual playtests across FPS settings
+- Logging: Optional debug overlays/console logs
+- Monitoring: Local app, no monitoring required
 
 GitHub: https://github.com/furkandalyan/Flappy-Bird.git
