--- a/src/content/projects/en/password-vault.mdx
+++ b/src/content/projects/en/password-vault.mdx
@@ -1,4 +1,4 @@
-﻿---
+---
 title: "Password Vault"
 summary: "Modern password manager with AES-256 encryption."
 github: "https://github.com/furkandalyan/Password-Vault.git"
@@ -16,5 +16,25 @@ Features:
 - Password strength meter
 - QR code sharing
 - Dark/Light theme
+
+## Tech Stack
+- Python 3.x
+- Tkinter (GUI)
+- SQLite
+- PyCryptodome (AES)
+- Qrcode
+
+## Technical Architecture
+`UI -> Vault Manager -> Crypto Engine -> SQLite`
+
+## Challenges & Lessons Learned
+- Secure storage and master password flow
+- Balancing crypto safety with usability
+- QR sharing without leaking sensitive data
+
+## Testing / Logging / Monitoring
+- Tests: Manual scenarios (add/update/delete, wrong password)
+- Logging: Minimal logging due to security concerns
+- Monitoring: Local app, no monitoring required
 
 GitHub: https://github.com/furkandalyan/Password-Vault.git
