--- a/src/content/projects/en/perfect-timer-game.mdx
+++ b/src/content/projects/en/perfect-timer-game.mdx
@@ -1,4 +1,4 @@
-﻿---
+---
 title: "Perfect Timer Game"
 summary: "Precision reflex game built with Python and Tkinter."
 github: "https://github.com/furkandalyan/Perfect-Timer-Game.git"
@@ -14,5 +14,23 @@ Features:
 - Target time setting
 - Millisecond-precision timing
 - Clean, focused game loop
+
+## Tech Stack
+- Python 3.x
+- Tkinter (GUI)
+- Time Module
+
+## Technical Architecture
+`UI -> Timer Engine -> Scoring -> Local Storage`
+
+## Challenges & Lessons Learned
+- Minimizing timing drift
+- Non-blocking UI updates
+- Fair scoring and feedback
+
+## Testing / Logging / Monitoring
+- Tests: Manual scenarios with different target times
+- Logging: Basic score/session logs
+- Monitoring: Local app, no monitoring required
 
 GitHub: https://github.com/furkandalyan/Perfect-Timer-Game.git
