--- a/src/content/projects/en/sample-project.mdx
+++ b/src/content/projects/en/sample-project.mdx
@@ -6,3 +6,20 @@ summary: "Sample MDX content for the project detail page."
 # Sample Project
 
 This page is a minimal MDX example for project details.
+
+## Tech Stack
+- MDX
+- Next.js (App Router)
+
+## Technical Architecture
+`MDX Content -> Parser -> Page Renderer`
+
+## Challenges & Lessons Learned
+- Consistent content structure
+- Clear heading hierarchy
+
+## Testing / Logging / Monitoring
+- Tests: Visual checks (preview)
+- Logging: Not required
+- Monitoring: Not required
+
