--- a/src/content/projects/en/smart-data-analyzer.mdx
+++ b/src/content/projects/en/smart-data-analyzer.mdx
@@ -1,4 +1,4 @@
-﻿---
+---
 title: "Smart Data Analyzer"
 summary: "Interactive data exploration app built with Python and Streamlit."
 github: "https://github.com/furkandalyan/SmartDataAnalyzer.git"
@@ -15,5 +15,25 @@ Features:
 - Automatic insights
 - Professional-grade charts
 - PDF report export
+
+## Tech Stack
+- Python 3.x
+- Streamlit
+- Pandas
+- Plotly
+- FPDF
+
+## Technical Architecture
+`Browser -> Streamlit App -> Data Loader -> Analyzer -> Visualization -> Report`
+
+## Challenges & Lessons Learned
+- Performance on large datasets
+- Reliable type inference and missing data handling
+- Report layout and readability
+
+## Testing / Logging / Monitoring
+- Tests: Manual smoke tests on sample datasets
+- Logging: App logs (stdout)
+- Monitoring: Hosting metrics (optional)
 
 GitHub: https://github.com/furkandalyan/SmartDataAnalyzer.git
