--- a/src/content/projects/en/snake-game.mdx
+++ b/src/content/projects/en/snake-game.mdx
@@ -1,4 +1,4 @@
-﻿---
+---
 title: "Snake Game"
 summary: "Modern Snake Game built with Python and Pygame."
 github: "https://github.com/furkandalyan/Snake-Game.git"
@@ -14,5 +14,23 @@ Features:
 - Smooth movement
 - Simple, clean UI
 - Expandable code structure
+
+## Tech Stack
+- Python 3.x
+- Pygame
+- Random
+
+## Technical Architecture
+`Input -> Game Loop -> Movement/Collision -> Renderer -> Score`
+
+## Challenges & Lessons Learned
+- Smooth movement at fixed speed
+- Accurate collision detection
+- Balanced difficulty curve
+
+## Testing / Logging / Monitoring
+- Tests: Manual playtests
+- Logging: Optional debug logs
+- Monitoring: Local app, no monitoring required
 
 GitHub: https://github.com/furkandalyan/Snake-Game.git
