--- a/src/content/projects/en/tic-tac-toe.mdx
+++ b/src/content/projects/en/tic-tac-toe.mdx
@@ -1,4 +1,4 @@
-﻿---
+---
 title: "Tic-Tac-Toe"
 summary: "Tic-Tac-Toe game app built with Python."
 github: "https://github.com/furkandalyan/Tic-Tac-Toe.git"
@@ -16,5 +16,24 @@ Features:
 - Theme switching
 - Fullscreen support
 - CSV export
+
+## Tech Stack
+- Python 3.x
+- Tkinter (GUI)
+- CLI
+- CSV
+
+## Technical Architecture
+`CLI/GUI -> Game Engine -> AI Decision -> Result Storage (CSV)`
+
+## Challenges & Lessons Learned
+- Balanced AI strategy
+- Consistent UX across CLI and GUI
+- Reliable game state management
+
+## Testing / Logging / Monitoring
+- Tests: Manual game scenarios across modes
+- Logging: Match results and scores
+- Monitoring: Local app, no monitoring required
 
 GitHub: https://github.com/furkandalyan/Tic-Tac-Toe.git
