--- a/src/content/projects/en/turkey-earthquake.mdx
+++ b/src/content/projects/en/turkey-earthquake.mdx
@@ -1,4 +1,4 @@
-﻿---
+---
 title: "TurkeyEarthquake"
 summary: "Django-based earthquake data dashboard for Turkey."
 github: "https://github.com/furkandalyan/TurkeyEarthquake.git"
@@ -15,5 +15,24 @@ Features:
 - Trend and statistics analysis
 - Analysis / statistics / forecasting views
 - Visualization dashboard
+
+## Tech Stack
+- Django
+- Data ingestion (API/CSV)
+- Analytics layer
+- Visualization layer
+
+## Technical Architecture
+`Data Sources -> Ingestion -> DB -> Analytics -> Django Dashboard`
+
+## Challenges & Lessons Learned
+- Data quality and cleaning
+- Time-series performance and aggregation
+- Dashboard readability for dense data
+
+## Testing / Logging / Monitoring
+- Tests: Manual checks with sample datasets
+- Logging: Ingestion and error logs
+- Monitoring: Hosting metrics (optional)
 
 GitHub: https://github.com/furkandalyan/TurkeyEarthquake.git
