--- a/src/content/projects/tr/sample-project.mdx
+++ b/src/content/projects/tr/sample-project.mdx
@@ -1,8 +1,43 @@
 ---
-title: "Örnek Proje"
-summary: "Bu proje için örnek MDX içeriði."
+title: "Ã–rnek Proje"
+summary: "Bu proje iÃ§in Ã¶rnek MDX iÃ§eriÄŸi."
 ---
 
-# Örnek Proje
+# Ã–rnek Proje
 
-Bu sayfa proje detaylarýný MDX ile göstermek için örnek.
+Bu sayfa proje detaylarÄ±nÄ± MDX ile gÃ¶stermek iÃ§in Ã¶rnek.
+
+
+
+## Tech Stack
+
+- MDX
+
+- Next.js (App Router)
+
+
+
+## Technical Architecture
+
+`MDX Content -> Parser -> Page Renderer`
+
+
+
+## Challenges & Lessons Learned
+
+- Icerik yapisinin tutarli kalmasi
+
+- Baslik hiyerarsisi ve okunabilirlik
+
+
+
+## Testing / Logging / Monitoring
+
+- Tests: Gorsel kontrol (preview)
+
+- Logging: Gerek yok
+
+- Monitoring: Gerek yok
+
+
+
