--- a/src/content/projects/tr/sheet-sweep.mdx
+++ b/src/content/projects/tr/sheet-sweep.mdx
@@ -1,58 +1,156 @@
-﻿---
-title: "Sheet Sweep"
-summary: "Python ve Tkinter ile geliştirilmiş, Excel verilerini temizlemek ve dönüştürmek için modern bir masaüstü uygulaması."
-github: "https://github.com/furkandalyan/Sheet-Sweep.git"
-tags: ["Python", "Desktop", "Data"]
 ---
+
+title: "Sheet Sweep"
+
+summary: "Python ve Tkinter ile geliştirilmiş, Excel verilerini temizlemek ve dönüştürmek için modern bir masaüstü uygulaması."
+
+github: "https://github.com/furkandalyan/Sheet-Sweep.git"
+
+tags: ["Python", "Desktop", "Data"]
+
+---
+
+
 
 ## Proje Özeti
 
+
+
 **Sheet Sweep**, Excel verilerini temizlemek, dönüştürmek ve analiz etmek için geliştirilmiş, Python ve **Tkinter** tabanlı modern bir masaüstü uygulamasıdır. Veri bilimciler ve analistler için tasarlanan bu araç, sütun seçimi, boş satır temizleme, tekrar eden kayıtları kaldırma ve format standardizasyonu gibi işlemleri kolaylaştırır.
+
+
 
 Bu proje, veri manipülasyonu (Pandas), GUI tasarımı ve dosya işlemleri konularında pratik yapmak amacıyla geliştirilmiştir.
 
+
+
 ## Teknik Mimari ve Özellikler
 
+
+
 ### Veri Temizleme
+
 - **Sütun Seçimi:** İstenmeyen sütunları kolayca kaldırabilirsiniz.
+
 - **Boş Satır Temizleme:** Veri setindeki boş satırları otomatik olarak siler.
+
 - **Tekrar Eden Kayıtlar:** Aynı veriye sahip satırları (duplicate) tespit eder ve kaldırır.
 
+
+
 ### Veri Dönüştürme
+
 - **Sütun Adı Normalizasyonu:** Sütun adlarını standart bir formata (küçük harf, boşluk yerine alt çizgi vb.) dönüştürür.
+
 - **Format Standardizasyonu:** Tarih ve sayı formatlarını belirli bir standarda getirir.
 
+
+
 ### Toplu İşleme ve Dışa Aktarma
+
 - **Toplu İşleme:** Bir klasördeki tüm Excel dosyalarını aynı anda işleyebilir.
+
 - **Çoklu Format Desteği:** Temizlenen verileri Excel, CSV, JSON veya SQLite formatında dışa aktarabilirsiniz.
 
+
+
 ### Analiz ve Raporlama
+
 - **Profil Raporu:** Veri setinin özetini (pandas-profiling / sweetviz) HTML raporu olarak oluşturur.
+
 - **İşlem Logları:** Yapılan tüm işlemler log dosyasına kaydedilir.
+
+
 
 ## Kullanılan Teknolojiler
 
+
+
 | Teknoloji | Rolü |
+
 |-----------|----------------|
+
 | **Python 3.x** | Ana geliştirme dili |
+
 | **Tkinter** | Grafiksel kullanıcı arayüzü (GUI) |
+
 | **Pandas** | Veri manipülasyonu ve analizi |
+
 | **OpenPyXL** | Excel dosyalarını okuma ve yazma |
+
 | **Pandas-Profiling** | Veri profili oluşturma |
+
+
+
+## Tech Stack
+
+- Python 3.x
+
+- Tkinter (GUI)
+
+- Pandas
+
+- OpenPyXL
+
+- CSV/JSON/SQLite ciktilari
+
+
+
+## Technical Architecture
+
+`UI -> Data Loader -> Cleaner/Transformer -> Exporter -> Files/DB`
+
+
+
+## Challenges & Lessons Learned
+
+- Buyuk veri dosyalarinda performans ve bellek kullanimi
+
+- Veri tiplerini koruyarak donusum yapmak
+
+- Toplu isleme senaryolarinda hata yonetimi
+
+
+
+## Testing / Logging / Monitoring
+
+- Tests: Farkli format ve hatali veriyle manuel kontroller
+
+- Logging: Islem loglari ve rapor ciktilari
+
+- Monitoring: Yerel uygulama, izleme gerektirmez
+
+
 
 ## Kurulum
 
+
+
 Projeyi yerel ortamda çalıştırmak için:
 
+
+
 1.  Depoyu klonlayın:
+
     ```bash
+
     git clone https://github.com/furkandalyan/Sheet-Sweep.git
+
     ```
+
 2.  Gerekli bağımlılıkları yükleyin:
+
     ```bash
+
     pip install -r requirements.txt
+
     ```
+
 3.  Başlatın:
+
     ```bash
+
     python main.py
+
     ```
+
