--- a/src/content/projects/tr/turkey-earthquake.mdx
+++ b/src/content/projects/tr/turkey-earthquake.mdx
@@ -1,4 +1,4 @@
-﻿---
+---
 title: "TurkeyEarthquake"
 summary: "Turkiye deprem verilerini analiz eden Django projesi."
 github: "https://github.com/furkandalyan/TurkeyEarthquake.git"
@@ -17,3 +17,44 @@ Ozellikler:
 - Gorsellestirme ve dashboard
 
 GitHub: https://github.com/furkandalyan/TurkeyEarthquake.git
+
+
+
+## Tech Stack
+
+- Django
+
+- Veri toplama (API/CSV)
+
+- Analiz katmani
+
+- Gorsellestirme katmani
+
+
+
+## Technical Architecture
+
+`Data Sources -> Ingestion -> DB -> Analytics -> Django Dashboard`
+
+
+
+## Challenges & Lessons Learned
+
+- Veri tutarliligi ve temizleme
+
+- Zaman serisi ve bolgesel analizlerde performans
+
+- Dashboard uzerinde okunabilirlik
+
+
+
+## Testing / Logging / Monitoring
+
+- Tests: Ornek veri setleriyle manuel kontroller
+
+- Logging: Veri toplama ve hata loglari
+
+- Monitoring: Hosting metrikleri (opsiyonel)
+
+
+
