--- a/src/content/projects/en/fast-writing-game.mdx
+++ b/src/content/projects/en/fast-writing-game.mdx
@@ -1,4 +1,4 @@
-﻿---
+---
 title: "Fast Writing Game"
 summary: "Typing practice app with a modern GUI."
 github: "https://github.com/furkandalyan/FastWriting-Game.git"
@@ -15,5 +15,24 @@ Features:
 - Real-time mistake highlighting
 - Best-time scoreboard
 - Continuous writing mode
+
+## Tech Stack
+- Python 3.x
+- Tkinter (GUI)
+- Time
+- Random
+
+## Technical Architecture
+`UI -> Input Handler -> Typing Engine -> Metrics/Scoring -> Local Storage`
+
+## Challenges & Lessons Learned
+- Real-time feedback without UI lag
+- Accurate WPM calculation
+- Event loop timing and responsiveness
+
+## Testing / Logging / Monitoring
+- Tests: Manual scenarios (short/long texts, different speeds)
+- Logging: Basic score/session logs
+- Monitoring: Local app, no monitoring required
 
 GitHub: https://github.com/furkandalyan/FastWriting-Game.git
